<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Sébastien Vrillaud
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
  <string name="app_name">Weight Logger</string>
  <string name="app_version">1.0.6</string>
  <string name="translator"></string>
  
  <!-- Common -->
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="title_new">New</string>
  <string name="title_edit">Edit</string>
  <string name="change">Change</string>
  <string name="title_delete">Delete</string>
  <string name="confirm_delete">Delete this record ?</string>
  <string name="record_saved">Saved</string>
  <string name="record_deleted">Record deleted</string>
  <string name="missing_fields">Missing fields !</string>
  <string name="preload">Last record data has been preloaded.</string>
  <string name="gender_male">Male</string>
  <string name="gender_female">Female</string>
  <string name="quit">Quit</string>
  <string name="ok">Ok</string>
  <string name="coming_soon">Coming soon !</string>
      
  <!-- Fields -->
  <string name="weight">Weight</string>
  <string name="body_fat">Body fat</string>
  <string name="body_water">Body water</string>
  <string name="muscle_mass">Muscle mass</string>
  <string name="daily_calorie_intake">Daily calorie intake</string>
  <string name="physique_rating">Physique rating</string>
  <string name="visceral_fat_rating">Visceral fat rating</string>
  <string name="bone_mass">Bone mass</string>
  <string name="metabolic_age">Metabolic age</string>
  <string name="metabolic_age_years_old">yo</string>
  
  <string name="physique_rating_1">Hidden Obese</string>
  <string name="physique_rating_2">Obese</string>
  <string name="physique_rating_3">Solidly Built</string>
  <string name="physique_rating_4">Under Exercised</string>
  <string name="physique_rating_5">Standard</string>
  <string name="physique_rating_6">Standard Muscular</string>
  <string name="physique_rating_7">Thin</string>
  <string name="physique_rating_8">Thin and Muscular</string> 
  <string name="physique_rating_9">Very Muscular</string>
  
  <!-- Export -->    
  <string name="storage_not_mounted">Storage space is not mounted !</string>
  <string name="network_error">Network error !</string>
  <string name="gc_configure_account">Please configure your Garmin Connect account in preferences !</string>
  <string name="gc_account_error">Bad Garmin Connect username or password !</string>
  
  <!-- Show -->
  <string name="normal">Normal</string>
  <string name="abnormal">Abnormal</string>
  <string name="bf_underfat">Underfat</string>
  <string name="bf_healthy">Healthy</string>
  <string name="bf_overfat">Overfat</string>
  <string name="bf_obese">Obese</string>
  <string name="vfr_healthy">Healthy</string>
  <string name="vfr_excess">Excess</string>

  <!-- Edit -->
  <string name="exported">Exported</string>
  
  <!-- Graph -->
  <string name="graph_title">Graph</string>
  
  <!-- Export -->
  <string name="export">Export</string>
  <string name="file_generated">File generated</string>
  <string name="no_export">Nothing to export</string>
  <plurals name="exported_records_count"> 
    <item quantity="one">1 record</item> 
    <item quantity="other">%d records</item> 
  </plurals>
  <string name="export_share_subject">WeightLogger export</string>
  <string name="export_upload_ok">Successfully uploaded</string>
  <string name="export_upload_failed">Upload has failed</string>
  
  <!-- Preferences -->
  <string name="pref">Preferences</string>
  <string name="pref_general_category">General</string>
  <string name="pref_gender">Gender</string>
  <string name="pref_age">Age</string>
  <string name="pref_age_summary">Choose your age.</string>
  <string name="pref_unit">Weight unit</string>
  <string name="pref_unit_kg">kg</string>
  <string name="pref_unit_lb">lb</string>
  <string name="pref_muscle_mass_unit">Muscle mass unit</string>
  <string name="pref_muscle_mass_unit_mass">Mass (kg / lb)</string>
  <string name="pref_muscle_mass_unit_percent">Percentage</string>
  <string name="pref_preload">Pre-loading</string>
  <string name="pref_preload_summary">New records are filled with the last record data for quicker data entry.</string>
  <string name="pref_fields">Optional fields</string>
  <string name="pref_fields_summary">Choose optional fields to display for a new record.</string>
  <string name="pref_export_dir">Export directory</string>       
  <string name="pref_garmin_category">Garmin Connect</string>
  <string name="pref_garmin_login">Login</string>
  <string name="pref_garmin_login_summary">Your Garmin Connect login.</string> 
  <string name="pref_garmin_password">Password</string>
  <string name="pref_garmin_password_summary">Your Garmin Connect password.</string>
  <string name="pref_database_category">Database</string>
  <string name="pref_backup_database">Backup database</string>
  <string name="pref_backup_database_summary">Backup database in export directory.</string>
  <string name="pref_backup_database_ok">Database successfully backuped (File : %1$s)</string>
  <string name="pref_backup_database_failed">Database backup has failed</string>
  <string name="pref_restore_database">Restore database</string>
  <string name="pref_restore_database_summary">Restore database from a backup file.</string>
  <string name="pref_restore_database_nofiles">No backup files to restore !</string>
  <string name="pref_restore_database_confirm">Really restore this backup : %1$s ? The current database will be replaced !</string>
  <string name="pref_restore_database_ok">Database successfully restored</string>
  <string name="pref_restore_database_failed">Database restoration has failed</string>
  <string name="pref_purge_database">Purge database</string>
  <string name="pref_purge_database_summary">Purge the database of ALL records. Use Carefully !</string>
  <string name="pref_purge_database_confirm">Really purge the database of ALL records ???</string>
  <string name="pref_database_purged">Database purged</string>
  <string name="pref_load_test_data">Load test data</string>
  <string name="pref_load_test_data_summary">Load many test records for testing purposes.</string>
  <string name="pref_test_data_loaded">Test data loaded</string>
  <string name="pref_misc_category">Misc</string>
  <string name="pref_about">About</string>
</resources>